--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
-torch
-torchvision
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 Pillow
 requests
 gunicorn
